roman-numerals-converter-app.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  CloudFormation Template for Roman Numerals Converter Application. This template
  creates Python Flask Web Application on Amazon Linux 2 ami-0be2609ba883822ec EC2 Instance with
  custom security group allowing http connections on port 80.
  Roman Numerals Converter Application is downloaded from Github repository,
  then installed on Flask.
Parameters:
  KeyPairName:
    Description: Enter the name of your Key Pair for SSH connections
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must one of the existing EC2 KeyPair

Resources:
  WebServerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable HTTP for Flask Web Server #required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp #required
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerHost:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: ami-0be2609ba883822ec
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      SecurityGroupIds: 
        - !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack 
      UserData: !Base64 |
        #! /bin/bash
        yum update -y
        yum install python3 -y
        pip3 install flask
        cd /home/ec2-user
        wget https://raw.githubusercontent.com/veyseltech2020/roman-numerals-converter/master/app.py
        mkdir templates
        cd templates
        wget https://raw.githubusercontent.com/veyseltech2020/roman-numerals-converter/master/templates/index.html
        wget https://raw.githubusercontent.com/veyseltech2020/roman-numerals-converter/master/templates/result.html
        cd ..
        python3 app.py

Outputs: 
  WebsiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Roman Numerals Converter Application URL
